--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -591,7 +591,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "39099f7f",
+   "id": "6ebd4be8",
    "metadata": {},
    "outputs": [
     {
@@ -614,7 +614,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "2262b031",
+   "id": "4771f922",
    "metadata": {},
    "outputs": [
     {
@@ -642,7 +642,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "236e3ae0",
+   "id": "1fb854bd",
    "metadata": {},
    "outputs": [
     {
@@ -665,7 +665,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "33d044ee",
+   "id": "6cfb82ae",
    "metadata": {},
    "outputs": [
     {
@@ -688,7 +688,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "8d6b68c5",
+   "id": "bdc04351",
    "metadata": {},
    "outputs": [
     {
@@ -711,7 +711,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "b4067a0e",
+   "id": "d2b8cf12",
    "metadata": {},
    "outputs": [
     {
@@ -859,7 +859,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "f18e2f5c",
+   "id": "37cf20b8",
    "metadata": {},
    "outputs": [
     {
@@ -1007,7 +1007,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "29a10b48",
+   "id": "0b272cbd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1021,7 +1021,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "ed275258",
+   "id": "0f7edeeb",
    "metadata": {},
    "outputs": [
     {
@@ -1041,7 +1041,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "6b5e3b75",
+   "id": "09d00291",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1052,7 +1052,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "e567afe7",
+   "id": "20d2c2fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1063,7 +1063,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "991020ce",
+   "id": "8e7042b5",
    "metadata": {},
    "outputs": [
     {
@@ -1083,7 +1083,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "95286e97",
+   "id": "9d97affc",
    "metadata": {},
    "outputs": [
     {
@@ -1232,7 +1232,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "a6f7948f",
+   "id": "b815c648",
    "metadata": {},
    "outputs": [
     {
@@ -1255,7 +1255,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "eca15bec",
+   "id": "1fdf7ccf",
    "metadata": {},
    "outputs": [
     {
@@ -1278,7 +1278,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "3bc728f1",
+   "id": "2f0c4035",
    "metadata": {},
    "outputs": [
     {
@@ -1358,7 +1358,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "a552689a",
+   "id": "bd934de5",
    "metadata": {},
    "outputs": [
     {
@@ -1383,7 +1383,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "c7fc2219",
+   "id": "36722dc3",
    "metadata": {},
    "outputs": [
     {
@@ -1409,7 +1409,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "e311a9c7",
+   "id": "59a336f4",
    "metadata": {},
    "outputs": [
     {
@@ -1433,7 +1433,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "03960c59",
+   "id": "b22a0950",
    "metadata": {},
    "outputs": [
     {
@@ -1456,7 +1456,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "5fdecbb7",
+   "id": "4b9e651c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1470,7 +1470,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "a172e473",
+   "id": "58fbb42c",
    "metadata": {},
    "outputs": [
     {
@@ -1540,7 +1540,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "61a8375a",
+   "id": "f2abc621",
    "metadata": {},
    "outputs": [
     {
@@ -1579,7 +1579,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "59011273",
+   "id": "e9c8443c",
    "metadata": {},
    "outputs": [
     {
@@ -1709,7 +1709,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "5ff6a4b1",
+   "id": "d4a4a1f1",
    "metadata": {},
    "outputs": [
     {
@@ -1748,7 +1748,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "33d8c691",
+   "id": "c1491124",
    "metadata": {},
    "outputs": [
     {
@@ -1787,7 +1787,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "d4d07ce5",
+   "id": "bd6f8cef",
    "metadata": {},
    "outputs": [
     {
@@ -1825,7 +1825,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "5c96d756",
+   "id": "2486d51b",
    "metadata": {},
    "outputs": [
     {
@@ -2075,7 +2075,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "088294ba",
+   "id": "90c7bb18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2088,7 +2088,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "e29b7dbe",
+   "id": "ba60c8a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2101,7 +2101,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "802a3b72",
+   "id": "8b0651fe",
    "metadata": {},
    "outputs": [
     {
@@ -2247,7 +2247,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "835df744",
+   "id": "cdd702b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2260,7 +2260,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "c677405c",
+   "id": "175a2a0a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2273,7 +2273,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "20e38e7a",
+   "id": "da64e0b4",
    "metadata": {},
    "outputs": [
     {
@@ -2422,7 +2422,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "ed0941a4",
+   "id": "692a1ac2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2433,7 +2433,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "9d211392",
+   "id": "d8f517a1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2444,7 +2444,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "a4574dd5",
+   "id": "fb55a021",
    "metadata": {},
    "outputs": [
     {
@@ -2614,7 +2614,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "4f9c45fe",
+   "id": "570db404",
    "metadata": {},
    "outputs": [
     {
@@ -2779,7 +2779,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "b6524cd1",
+   "id": "21c514d4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2793,7 +2793,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "72cce877",
+   "id": "557d66e6",
    "metadata": {},
    "outputs": [
     {
@@ -2950,8 +2950,330 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 65,
+   "id": "7634d53d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>School Type</th>\n",
+       "      <th>Total Students</th>\n",
+       "      <th>Total School Budget</th>\n",
+       "      <th>Per Student Budget</th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>school_name</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Cabrera High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1858</td>\n",
+       "      <td>$1,081,356.00</td>\n",
+       "      <td>$582.00</td>\n",
+       "      <td>83.1</td>\n",
+       "      <td>84.0</td>\n",
+       "      <td>94.13</td>\n",
+       "      <td>97.04</td>\n",
+       "      <td>91.33</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Thomas High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1635</td>\n",
+       "      <td>$1,043,130.00</td>\n",
+       "      <td>$638.00</td>\n",
+       "      <td>83.4</td>\n",
+       "      <td>83.8</td>\n",
+       "      <td>93.27</td>\n",
+       "      <td>97.31</td>\n",
+       "      <td>90.95</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Griffin High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1468</td>\n",
+       "      <td>$917,500.00</td>\n",
+       "      <td>$625.00</td>\n",
+       "      <td>83.4</td>\n",
+       "      <td>83.8</td>\n",
+       "      <td>93.39</td>\n",
+       "      <td>97.14</td>\n",
+       "      <td>90.60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wilson High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>2283</td>\n",
+       "      <td>$1,319,574.00</td>\n",
+       "      <td>$578.00</td>\n",
+       "      <td>83.3</td>\n",
+       "      <td>84.0</td>\n",
+       "      <td>93.87</td>\n",
+       "      <td>96.54</td>\n",
+       "      <td>90.58</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Pena High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>962</td>\n",
+       "      <td>$585,858.00</td>\n",
+       "      <td>$609.00</td>\n",
+       "      <td>83.8</td>\n",
+       "      <td>84.0</td>\n",
+       "      <td>94.59</td>\n",
+       "      <td>95.95</td>\n",
+       "      <td>90.54</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    School Type  Total Students Total School Budget  \\\n",
+       "school_name                                                           \n",
+       "Cabrera High School     Charter            1858       $1,081,356.00   \n",
+       "Thomas High School      Charter            1635       $1,043,130.00   \n",
+       "Griffin High School     Charter            1468         $917,500.00   \n",
+       "Wilson High School      Charter            2283       $1,319,574.00   \n",
+       "Pena High School        Charter             962         $585,858.00   \n",
+       "\n",
+       "                    Per Student Budget Average Math Score  \\\n",
+       "school_name                                                 \n",
+       "Cabrera High School            $582.00               83.1   \n",
+       "Thomas High School             $638.00               83.4   \n",
+       "Griffin High School            $625.00               83.4   \n",
+       "Wilson High School             $578.00               83.3   \n",
+       "Pena High School               $609.00               83.8   \n",
+       "\n",
+       "                    Average Reading Score % Passing Math % Passing Reading  \\\n",
+       "school_name                                                                  \n",
+       "Cabrera High School                  84.0          94.13             97.04   \n",
+       "Thomas High School                   83.8          93.27             97.31   \n",
+       "Griffin High School                  83.8          93.39             97.14   \n",
+       "Wilson High School                   84.0          93.87             96.54   \n",
+       "Pena High School                     84.0          94.59             95.95   \n",
+       "\n",
+       "                    % Overall Passing  \n",
+       "school_name                            \n",
+       "Cabrera High School             91.33  \n",
+       "Thomas High School              90.95  \n",
+       "Griffin High School             90.60  \n",
+       "Wilson High School              90.58  \n",
+       "Pena High School                90.54  "
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Sort and show top five schools.\n",
+    "top_schools = per_school_summary_df.sort_values([\"% Overall Passing\"], ascending=False)\n",
+    "\n",
+    "top_schools.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "b53352a7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>School Type</th>\n",
+       "      <th>Total Students</th>\n",
+       "      <th>Total School Budget</th>\n",
+       "      <th>Per Student Budget</th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>school_name</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Rodriguez High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>3999</td>\n",
+       "      <td>$2,547,363.00</td>\n",
+       "      <td>$637.00</td>\n",
+       "      <td>76.8</td>\n",
+       "      <td>80.7</td>\n",
+       "      <td>66.37</td>\n",
+       "      <td>80.22</td>\n",
+       "      <td>52.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Figueroa High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>2949</td>\n",
+       "      <td>$1,884,411.00</td>\n",
+       "      <td>$639.00</td>\n",
+       "      <td>76.7</td>\n",
+       "      <td>81.2</td>\n",
+       "      <td>65.99</td>\n",
+       "      <td>80.74</td>\n",
+       "      <td>53.20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Huang High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>2917</td>\n",
+       "      <td>$1,910,635.00</td>\n",
+       "      <td>$655.00</td>\n",
+       "      <td>76.6</td>\n",
+       "      <td>81.2</td>\n",
+       "      <td>65.68</td>\n",
+       "      <td>81.32</td>\n",
+       "      <td>53.51</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Hernandez High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>4635</td>\n",
+       "      <td>$3,022,020.00</td>\n",
+       "      <td>$652.00</td>\n",
+       "      <td>77.3</td>\n",
+       "      <td>80.9</td>\n",
+       "      <td>66.75</td>\n",
+       "      <td>80.86</td>\n",
+       "      <td>53.53</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Johnson High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>4761</td>\n",
+       "      <td>$3,094,650.00</td>\n",
+       "      <td>$650.00</td>\n",
+       "      <td>77.1</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>66.06</td>\n",
+       "      <td>81.22</td>\n",
+       "      <td>53.54</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      School Type  Total Students Total School Budget  \\\n",
+       "school_name                                                             \n",
+       "Rodriguez High School    District            3999       $2,547,363.00   \n",
+       "Figueroa High School     District            2949       $1,884,411.00   \n",
+       "Huang High School        District            2917       $1,910,635.00   \n",
+       "Hernandez High School    District            4635       $3,022,020.00   \n",
+       "Johnson High School      District            4761       $3,094,650.00   \n",
+       "\n",
+       "                      Per Student Budget Average Math Score  \\\n",
+       "school_name                                                   \n",
+       "Rodriguez High School            $637.00               76.8   \n",
+       "Figueroa High School             $639.00               76.7   \n",
+       "Huang High School                $655.00               76.6   \n",
+       "Hernandez High School            $652.00               77.3   \n",
+       "Johnson High School              $650.00               77.1   \n",
+       "\n",
+       "                      Average Reading Score % Passing Math % Passing Reading  \\\n",
+       "school_name                                                                    \n",
+       "Rodriguez High School                  80.7          66.37             80.22   \n",
+       "Figueroa High School                   81.2          65.99             80.74   \n",
+       "Huang High School                      81.2          65.68             81.32   \n",
+       "Hernandez High School                  80.9          66.75             80.86   \n",
+       "Johnson High School                    81.0          66.06             81.22   \n",
+       "\n",
+       "                      % Overall Passing  \n",
+       "school_name                              \n",
+       "Rodriguez High School             52.99  \n",
+       "Figueroa High School              53.20  \n",
+       "Huang High School                 53.51  \n",
+       "Hernandez High School             53.53  \n",
+       "Johnson High School               53.54  "
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Sort and show top five schools.\n",
+    "bottom_schools = per_school_summary_df.sort_values([\"% Overall Passing\"], ascending=True)\n",
+    "\n",
+    "bottom_schools.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "abc2cb6d",
+   "id": "9bc8cb12",
    "metadata": {},
    "outputs": [],
    "source": []
